<resources>
    <string name="app_name">Assignment1_101092895</string>
    <color name="white">#ffffff</color>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="affiliation">Affiliation</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="profileImg">profileImg</string>
    <string name="login_preference">com.example.tamdang.assignment1_101092895_login_preference </string>
    <string name="login_status_preference">com.example.tamdang.assignment1_101092895_login_status_preference </string>
    <string name="title_activity_college_map">Map</string>


</resources>
